# clz

./: Cargo.toml  LICENSE  README.md  example.json  example.sh  test.sh
.github/workflows/: ci.yml
examples/: example.sh
src/: main.rs
