[package]
name = "clz"
version = "0.1.0"
edition = "2021"
description = "colorize text that matches a pattern"
license = "MIT"
readme = "README.md"
repository = "https://github.com/adamlouis/clz"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"